z-index fix

--- a/src/components/sortTable/_table.scss
+++ b/src/components/sortTable/_table.scss
@@ -162,7 +162,8 @@ table {
       &:first-child {
         position: sticky;
         left: 0;
-        z-index: 3;
+
+        // z-index: 3;
       }
     }
 
@@ -171,7 +172,6 @@ table {
         display: table;
         width: 100%;
         table-layout: fixed;
-        z-index: 1;
       }
     }
 
